# synthetic-wan-data

./: .env.example  .gitignore  .gitmodules  README.md  generate_dataset.py  pyproject.toml  ral_dissolve_prompts.txt  ral_dissolve_prompts0.txt  run_pipeline.py
.claude/: settings.local.json
examples/: ral_dissolve_prompts.txt
src/: __init__.py  preprocess_video.py
src/stage1_scrape/: __init__.py  expand_prompts.py  scraper.py
src/stage2_generate_images/: __init__.py  generate.py
src/stage3_generate_video/: __init__.py  generate.py  generate_comfyui.py  video_wan2_2_14B_i2v.json
