[project]
name = "distill-flux-lora"
version = "0.1.0"
description = "Generate datasets from Flux LoRAs for distillation into Wan2.1 LoRAs"
requires-python = ">=3.12"
dependencies = [
    "torch==2.9.1",
    "torchvision==0.24.1",
    "diffusers>=0.32.0",
    "transformers>=4.49.0",
    "accelerate>=1.1.1",
    "safetensors>=0.6.2",
    "peft>=0.17.0",
    "sentencepiece",
    "tqdm",
    "imageio[ffmpeg]",
    "ftfy",
]

[tool.uv]
preview = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
