[project]
name = "synthetic-wan-data"
version = "0.1.0"
description = "Pipeline: Scrape CivitAI LoRAs -> Generate image datasets -> Generate video datasets"
requires-python = ">=3.12"
dependencies = [
    # Stage 1: Scraping + prompt expansion (lightweight)
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "tqdm",
    "ollama>=0.4.0",
]

[project.optional-dependencies]
# Stage 2+3: Heavy ML deps for image/video generation
generate = [
    "torch==2.9.1",
    "torchvision==0.24.1",
    "diffusers>=0.32.0",
    "transformers>=4.49.0",
    "accelerate>=1.1.1",
    "safetensors>=0.6.2",
    "peft>=0.17.0",
    "sentencepiece",
    "imageio[ffmpeg]",
    "ftfy",
]

[tool.uv]
preview = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
