[project]
name = "synthetic-wan-data"
version = "0.1.0"
description = "Pipeline: Scrape CivitAI LoRAs -> Generate image datasets -> Generate video datasets"
requires-python = ">=3.12"
dependencies = [
    # Stage 1: Scraping + prompt expansion (lightweight)
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "tqdm",
    "ollama>=0.4.0",
    "huggingface-hub>=1.3.5",
]

[project.optional-dependencies]
# Stage 2+3: Heavy ML deps for image/video generation
generate = [
    # PyTorch - CUDA versions from pytorch-cu128 index
    "torch==2.9.1",
    "torchvision==0.24.1",
    "torchaudio",
    "triton-windows==3.5.1.post24; sys_platform == 'win32'",
    "triton==3.5.1; sys_platform == 'linux'",
    # LTX-2 local packages
    "ltx-core",
    "ltx-pipelines",
    # Core deps
    "numpy",
    "einops",
    "transformers>=4.49.0",
    "accelerate>=1.1.1",
    "safetensors>=0.6.2",
    "scipy>=1.14",
    # Video/image processing
    "av",
    "pillow",
    # Stage 2 image gen
    "diffusers",
    "peft>=0.17.0",
    "sentencepiece",
    "imageio[ffmpeg]",
    "ftfy",
]

[tool.uv]
preview = true
# Override cuDNN version to fix PyTorch 2.9.1 Conv3D bf16 performance regression
# See: https://github.com/pytorch/pytorch/issues/168167
override-dependencies = [
    "nvidia-cudnn-cu12>=9.15; sys_platform == 'linux' or sys_platform == 'win32'",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
diffusers = { git = "https://github.com/huggingface/diffusers.git", branch = "main" }
ltx-pipelines = { path = "C:/_dev/projects/YouTube_Forest/ltx2/LTX-2/packages/ltx-pipelines", editable = true }
ltx-core = { path = "C:/_dev/projects/YouTube_Forest/ltx2/LTX-2/packages/ltx-core", editable = true }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
